cl/PolygonParser.py
# Generated from Polygon.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PolygonParser ( Parser ):

    grammarFileName = "Polygon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "':='", "'*'", 
                     "'+'", "'#'", "'!'", "','", "'\"'", "'print'", "'area'", 
                     "'perimeter'", "'vertices'", "'centroid'", "'color'", 
                     "'inside'", "'equal'", "'draw'" ]

    symbolicNames = [ "<INVALID>", "RNUM", "NUM", "NATNUM", "LPARENTHESIS", 
                      "RPARENTHESIS", "LBRACKET", "RBRACKET", "LCLAUDATOR", 
                      "RCLAUDATOR", "ASSIG", "INTERSECT", "UNION", "BOUNDING", 
                      "RANDOM", "COMMA", "QUOTE", "PRINT", "AREA", "PERIMETER", 
                      "VERTICES", "CENTROID", "COLOR", "INSIDE", "EQUAL", 
                      "DRAW", "STRING", "ID", "COMMENT", "WS" ]

    RULE_root = 0
    RULE_string = 1
    RULE_point = 2
    RULE_polygon = 3
    RULE_assig = 4
    RULE_assignedid = 5
    RULE_printsmth = 6
    RULE_area = 7
    RULE_perimeter = 8
    RULE_vertices = 9
    RULE_centroid = 10
    RULE_inside = 11
    RULE_equal = 12
    RULE_draw = 13
    RULE_colornum = 14
    RULE_color = 15

    ruleNames =  [ "root", "string", "point", "polygon", "assig", "assignedid", 
                   "printsmth", "area", "perimeter", "vertices", "centroid", 
                   "inside", "equal", "draw", "colornum", "color" ]

    EOF = Token.EOF
    RNUM=1
    NUM=2
    NATNUM=3
    LPARENTHESIS=4
    RPARENTHESIS=5
    LBRACKET=6
    RBRACKET=7
    LCLAUDATOR=8
    RCLAUDATOR=9
    ASSIG=10
    INTERSECT=11
    UNION=12
    BOUNDING=13
    RANDOM=14
    COMMA=15
    QUOTE=16
    PRINT=17
    AREA=18
    PERIMETER=19
    VERTICES=20
    CENTROID=21
    COLOR=22
    INSIDE=23
    EQUAL=24
    DRAW=25
    STRING=26
    ID=27
    COMMENT=28
    WS=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PolygonParser.EOF, 0)

        def assig(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.AssigContext)
            else:
                return self.getTypedRuleContext(PolygonParser.AssigContext,i)


        def printsmth(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.PrintsmthContext)
            else:
                return self.getTypedRuleContext(PolygonParser.PrintsmthContext,i)


        def area(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.AreaContext)
            else:
                return self.getTypedRuleContext(PolygonParser.AreaContext,i)


        def perimeter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.PerimeterContext)
            else:
                return self.getTypedRuleContext(PolygonParser.PerimeterContext,i)


        def vertices(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.VerticesContext)
            else:
                return self.getTypedRuleContext(PolygonParser.VerticesContext,i)


        def centroid(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.CentroidContext)
            else:
                return self.getTypedRuleContext(PolygonParser.CentroidContext,i)


        def inside(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.InsideContext)
            else:
                return self.getTypedRuleContext(PolygonParser.InsideContext,i)


        def equal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.EqualContext)
            else:
                return self.getTypedRuleContext(PolygonParser.EqualContext,i)


        def draw(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.DrawContext)
            else:
                return self.getTypedRuleContext(PolygonParser.DrawContext,i)


        def color(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.ColorContext)
            else:
                return self.getTypedRuleContext(PolygonParser.ColorContext,i)


        def getRuleIndex(self):
            return PolygonParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = PolygonParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PolygonParser.PRINT) | (1 << PolygonParser.AREA) | (1 << PolygonParser.PERIMETER) | (1 << PolygonParser.VERTICES) | (1 << PolygonParser.CENTROID) | (1 << PolygonParser.COLOR) | (1 << PolygonParser.INSIDE) | (1 << PolygonParser.EQUAL) | (1 << PolygonParser.DRAW) | (1 << PolygonParser.ID))) != 0):
                self.state = 42
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PolygonParser.ID]:
                    self.state = 32
                    self.assig()
                    pass
                elif token in [PolygonParser.PRINT]:
                    self.state = 33
                    self.printsmth()
                    pass
                elif token in [PolygonParser.AREA]:
                    self.state = 34
                    self.area()
                    pass
                elif token in [PolygonParser.PERIMETER]:
                    self.state = 35
                    self.perimeter()
                    pass
                elif token in [PolygonParser.VERTICES]:
                    self.state = 36
                    self.vertices()
                    pass
                elif token in [PolygonParser.CENTROID]:
                    self.state = 37
                    self.centroid()
                    pass
                elif token in [PolygonParser.INSIDE]:
                    self.state = 38
                    self.inside()
                    pass
                elif token in [PolygonParser.EQUAL]:
                    self.state = 39
                    self.equal()
                    pass
                elif token in [PolygonParser.DRAW]:
                    self.state = 40
                    self.draw()
                    pass
                elif token in [PolygonParser.COLOR]:
                    self.state = 41
                    self.color()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(PolygonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(PolygonParser.QUOTE)
            else:
                return self.getToken(PolygonParser.QUOTE, i)

        def STRING(self):
            return self.getToken(PolygonParser.STRING, 0)

        def getRuleIndex(self):
            return PolygonParser.RULE_string

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = PolygonParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(PolygonParser.QUOTE)
            self.state = 50
            self.match(PolygonParser.STRING)
            self.state = 51
            self.match(PolygonParser.QUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PointContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RNUM(self, i:int=None):
            if i is None:
                return self.getTokens(PolygonParser.RNUM)
            else:
                return self.getToken(PolygonParser.RNUM, i)

        def getRuleIndex(self):
            return PolygonParser.RULE_point

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPoint" ):
                return visitor.visitPoint(self)
            else:
                return visitor.visitChildren(self)




    def point(self):

        localctx = PolygonParser.PointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_point)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(PolygonParser.RNUM)
            self.state = 54
            self.match(PolygonParser.RNUM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PolygonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PolygonParser.RULE_polygon

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class RandomContext(PolygonContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolygonParser.PolygonContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RANDOM(self):
            return self.getToken(PolygonParser.RANDOM, 0)
        def NATNUM(self):
            return self.getToken(PolygonParser.NATNUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRandom" ):
                return visitor.visitRandom(self)
            else:
                return visitor.visitChildren(self)


    class NewpolygonContext(PolygonContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolygonParser.PolygonContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LBRACKET(self):
            return self.getToken(PolygonParser.LBRACKET, 0)
        def RBRACKET(self):
            return self.getToken(PolygonParser.RBRACKET, 0)
        def point(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.PointContext)
            else:
                return self.getTypedRuleContext(PolygonParser.PointContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewpolygon" ):
                return visitor.visitNewpolygon(self)
            else:
                return visitor.visitChildren(self)


    class ConvexunionContext(PolygonContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolygonParser.PolygonContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def polygon(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.PolygonContext)
            else:
                return self.getTypedRuleContext(PolygonParser.PolygonContext,i)

        def UNION(self):
            return self.getToken(PolygonParser.UNION, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConvexunion" ):
                return visitor.visitConvexunion(self)
            else:
                return visitor.visitChildren(self)


    class IntersectionContext(PolygonContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolygonParser.PolygonContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def polygon(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.PolygonContext)
            else:
                return self.getTypedRuleContext(PolygonParser.PolygonContext,i)

        def INTERSECT(self):
            return self.getToken(PolygonParser.INTERSECT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntersection" ):
                return visitor.visitIntersection(self)
            else:
                return visitor.visitChildren(self)


    class PolygonidContext(PolygonContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolygonParser.PolygonContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignedid(self):
            return self.getTypedRuleContext(PolygonParser.AssignedidContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolygonid" ):
                return visitor.visitPolygonid(self)
            else:
                return visitor.visitChildren(self)


    class PriorityContext(PolygonContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PolygonParser.PolygonContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPARENTHESIS(self):
            return self.getToken(PolygonParser.LPARENTHESIS, 0)
        def polygon(self):
            return self.getTypedRuleContext(PolygonParser.PolygonContext,0)

        def RPARENTHESIS(self):
            return self.getToken(PolygonParser.RPARENTHESIS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPriority" ):
                return visitor.visitPriority(self)
            else:
                return visitor.visitChildren(self)



    def polygon(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PolygonParser.PolygonContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_polygon, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PolygonParser.LPARENTHESIS]:
                localctx = PolygonParser.PriorityContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 57
                self.match(PolygonParser.LPARENTHESIS)
                self.state = 58
                self.polygon(0)
                self.state = 59
                self.match(PolygonParser.RPARENTHESIS)
                pass
            elif token in [PolygonParser.LBRACKET]:
                localctx = PolygonParser.NewpolygonContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 61
                self.match(PolygonParser.LBRACKET)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PolygonParser.RNUM:
                    self.state = 62
                    self.point()
                    self.state = 67
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 68
                self.match(PolygonParser.RBRACKET)
                pass
            elif token in [PolygonParser.RANDOM]:
                localctx = PolygonParser.RandomContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 69
                self.match(PolygonParser.RANDOM)
                self.state = 70
                self.match(PolygonParser.NATNUM)
                pass
            elif token in [PolygonParser.ID]:
                localctx = PolygonParser.PolygonidContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.assignedid()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 80
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = PolygonParser.IntersectionContext(self, PolygonParser.PolygonContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_polygon)
                        self.state = 74
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 75
                        self.match(PolygonParser.INTERSECT)
                        self.state = 76
                        self.polygon(5)
                        pass

                    elif la_ == 2:
                        localctx = PolygonParser.ConvexunionContext(self, PolygonParser.PolygonContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_polygon)
                        self.state = 77
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 78
                        self.match(PolygonParser.UNION)
                        self.state = 79
                        self.polygon(4)
                        pass

             
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AssigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PolygonParser.ID, 0)

        def ASSIG(self):
            return self.getToken(PolygonParser.ASSIG, 0)

        def polygon(self):
            return self.getTypedRuleContext(PolygonParser.PolygonContext,0)


        def getRuleIndex(self):
            return PolygonParser.RULE_assig

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssig" ):
                return visitor.visitAssig(self)
            else:
                return visitor.visitChildren(self)




    def assig(self):

        localctx = PolygonParser.AssigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assig)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(PolygonParser.ID)
            self.state = 86
            self.match(PolygonParser.ASSIG)
            self.state = 87
            self.polygon(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignedidContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PolygonParser.ID, 0)

        def getRuleIndex(self):
            return PolygonParser.RULE_assignedid

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignedid" ):
                return visitor.visitAssignedid(self)
            else:
                return visitor.visitChildren(self)




    def assignedid(self):

        localctx = PolygonParser.AssignedidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignedid)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PolygonParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintsmthContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PolygonParser.PRINT, 0)

        def polygon(self):
            return self.getTypedRuleContext(PolygonParser.PolygonContext,0)


        def string(self):
            return self.getTypedRuleContext(PolygonParser.StringContext,0)


        def getRuleIndex(self):
            return PolygonParser.RULE_printsmth

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintsmth" ):
                return visitor.visitPrintsmth(self)
            else:
                return visitor.visitChildren(self)




    def printsmth(self):

        localctx = PolygonParser.PrintsmthContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_printsmth)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(PolygonParser.PRINT)
                self.state = 92
                self.polygon(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(PolygonParser.PRINT)
                self.state = 94
                self.string()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AreaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AREA(self):
            return self.getToken(PolygonParser.AREA, 0)

        def polygon(self):
            return self.getTypedRuleContext(PolygonParser.PolygonContext,0)


        def getRuleIndex(self):
            return PolygonParser.RULE_area

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArea" ):
                return visitor.visitArea(self)
            else:
                return visitor.visitChildren(self)




    def area(self):

        localctx = PolygonParser.AreaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_area)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(PolygonParser.AREA)
            self.state = 98
            self.polygon(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PerimeterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PERIMETER(self):
            return self.getToken(PolygonParser.PERIMETER, 0)

        def polygon(self):
            return self.getTypedRuleContext(PolygonParser.PolygonContext,0)


        def getRuleIndex(self):
            return PolygonParser.RULE_perimeter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPerimeter" ):
                return visitor.visitPerimeter(self)
            else:
                return visitor.visitChildren(self)




    def perimeter(self):

        localctx = PolygonParser.PerimeterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_perimeter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(PolygonParser.PERIMETER)
            self.state = 101
            self.polygon(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerticesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERTICES(self):
            return self.getToken(PolygonParser.VERTICES, 0)

        def polygon(self):
            return self.getTypedRuleContext(PolygonParser.PolygonContext,0)


        def getRuleIndex(self):
            return PolygonParser.RULE_vertices

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertices" ):
                return visitor.visitVertices(self)
            else:
                return visitor.visitChildren(self)




    def vertices(self):

        localctx = PolygonParser.VerticesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vertices)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(PolygonParser.VERTICES)
            self.state = 104
            self.polygon(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CentroidContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CENTROID(self):
            return self.getToken(PolygonParser.CENTROID, 0)

        def polygon(self):
            return self.getTypedRuleContext(PolygonParser.PolygonContext,0)


        def getRuleIndex(self):
            return PolygonParser.RULE_centroid

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCentroid" ):
                return visitor.visitCentroid(self)
            else:
                return visitor.visitChildren(self)




    def centroid(self):

        localctx = PolygonParser.CentroidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_centroid)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(PolygonParser.CENTROID)
            self.state = 107
            self.polygon(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsideContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSIDE(self):
            return self.getToken(PolygonParser.INSIDE, 0)

        def polygon(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.PolygonContext)
            else:
                return self.getTypedRuleContext(PolygonParser.PolygonContext,i)


        def COMMA(self):
            return self.getToken(PolygonParser.COMMA, 0)

        def getRuleIndex(self):
            return PolygonParser.RULE_inside

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInside" ):
                return visitor.visitInside(self)
            else:
                return visitor.visitChildren(self)




    def inside(self):

        localctx = PolygonParser.InsideContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_inside)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(PolygonParser.INSIDE)
            self.state = 110
            self.polygon(0)
            self.state = 111
            self.match(PolygonParser.COMMA)
            self.state = 112
            self.polygon(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(PolygonParser.EQUAL, 0)

        def polygon(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.PolygonContext)
            else:
                return self.getTypedRuleContext(PolygonParser.PolygonContext,i)


        def COMMA(self):
            return self.getToken(PolygonParser.COMMA, 0)

        def getRuleIndex(self):
            return PolygonParser.RULE_equal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual" ):
                return visitor.visitEqual(self)
            else:
                return visitor.visitChildren(self)




    def equal(self):

        localctx = PolygonParser.EqualContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_equal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(PolygonParser.EQUAL)
            self.state = 115
            self.polygon(0)
            self.state = 116
            self.match(PolygonParser.COMMA)
            self.state = 117
            self.polygon(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DrawContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DRAW(self):
            return self.getToken(PolygonParser.DRAW, 0)

        def string(self):
            return self.getTypedRuleContext(PolygonParser.StringContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PolygonParser.COMMA)
            else:
                return self.getToken(PolygonParser.COMMA, i)

        def polygon(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PolygonParser.PolygonContext)
            else:
                return self.getTypedRuleContext(PolygonParser.PolygonContext,i)


        def getRuleIndex(self):
            return PolygonParser.RULE_draw

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDraw" ):
                return visitor.visitDraw(self)
            else:
                return visitor.visitChildren(self)




    def draw(self):

        localctx = PolygonParser.DrawContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_draw)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(PolygonParser.DRAW)
            self.state = 120
            self.string()
            self.state = 123 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 121
                self.match(PolygonParser.COMMA)
                self.state = 122
                self.polygon(0)
                self.state = 125 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PolygonParser.COMMA):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColornumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(PolygonParser.NUM)
            else:
                return self.getToken(PolygonParser.NUM, i)

        def getRuleIndex(self):
            return PolygonParser.RULE_colornum

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColornum" ):
                return visitor.visitColornum(self)
            else:
                return visitor.visitChildren(self)




    def colornum(self):
